--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASSWORD=hala
+DB_PASSWORD=Raghad123@
 DB_NAME=manzilah
 PORT=5000
 JWT_SECRET="this.is.gradguationP1SW"
