--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.15.3",
     "pdfkit": "^0.17.2",
+    "resend": "^6.7.0",
     "sharp": "^0.34.5",
     "socket.io": "^4.8.3",
     "stripe": "^20.1.0"
